--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./assets/main.css">
@@ -22,27 +22,105 @@
 <body>
   <div class="container">
     <div class="row">
-        <div class="col-3">
-          <div class="user-info">
-            <img class="img-fluid users-img" src="assets/images/image-jeremy.png">
-            <p>Report for</p>
-            <h1>Jeremy Robson</h1>
-          </div>
-          <div class="time">
-            <button class="btn">Daily</button>
-            <button class="btn">Weekly</button>
-            <button class="btn">Monthly</button>
+      <div class="col-lg-3">
+        <div class="user-info">
+          <img class="img-fluid users-img" src="assets/images/image-jeremy.png">
+          <p>Report for</p>
+          <h1>Jeremy Robson</h1>
+        </div>
+        <div class="time">
+          <div class="btn-div">
+            <button class="btn" id="daily">Daily</button>
+            <button class="btn" id="weekly">Weekly</button>
+            <button class="btn" id="monthly">Monthly</button>
           </div>
         </div>
-        <div class="col-9">
-          <div class="row">
-            <div class="col-4">test</div>
-            <div class="col-4">test</div>
-            <div class="col-4">test</div>
+      </div>
+      <div class="col-lg-9">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="event-img">
+              <img src="./assets/images/icon-work.svg" alt="work">
+            </div>
+            <div class="event-desc">
+              <h3 class="title">Work</h3>
+              <div class="hour-div">
+                <p class="hour"> <span></span> hrs</p>
+                <p class="last-hour"></p>
+              </div>
+              <span class="dot">. . .</span>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="event-img-2">
+              <img src="./assets/images/icon-play.svg" alt="play">
+            </div>
+            <div class="event-desc">
+              <h3 class="title">Play</h3>
+                <div class="hour-div">
+                <p class="hour"> <span></span> hrs</p>
+                <p class="last-hour"></p>
+              </div>
+              <span class="dot">. . .</span>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="event-img-3">
+              <img src="./assets/images/icon-study.svg" alt="study">
+            </div>
+            <div class="event-desc">
+              <h3 class="title">Study</h3>
+                <div class="hour-div">
+                <p class="hour"> <span></span> hrs</p>
+                <p class="last-hour"></p>
+              </div>
+              <span class="dot">. . .</span>
+            </div>
+          </div>
+          <div class="mt-lg-4"></div>
+          <div class="col-lg-4">
+            <div class="event-img-4">
+              <img src="./assets/images/icon-exercise.svg" alt="exercise">
+            </div>
+            <div class="event-desc">
+              <h3 class="title">Exercise</h3>
+                <div class="hour-div">
+                <p class="hour"> <span></span> hrs</p>
+                <p class="last-hour"></p>
+              </div>
+              <span class="dot">. . .</span>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="event-img-5">
+              <img src="./assets/images/icon-social.svg" alt="social">
+            </div>
+            <div class="event-desc">
+              <h3 class="title">Social</h3>
+                <div class="hour-div">
+                <p class="hour"> <span></span> hrs</p>
+                <p class="last-hour"></p>
+              </div>
+              <span class="dot">. . .</span>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="event-img-6">
+              <img src="./assets/images/icon-self-care.svg" alt="-self-care">
+            </div>
+            <div class="event-desc">
+              <h3 class="title">Self Care</h3>
+                <div class="hour-div">
+                <p class="hour"> <span></span> hrs</p>
+                <p class="last-hour"></p>
+              </div>
+              <span class="dot">. . .</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
   </div>
 
 
